--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="icon" href="%PUBLIC_URL%/web_icon.jpg" />
+    <title>portfolio </title>
   </head>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <body>
